--- a/gradle.properties
+++ b/gradle.properties
@@ -40,11 +40,11 @@ forge_version = 47.1.43
 
 # Create - Fabric
 # https://modrinth.com/mod/create-fabric/versions
-create_fabric_version = 0.5.1-h-build.1516+mc1.20.1
+create_fabric_version = 0.5.1-j-build.1562+mc1.20.1
 
 # Create - Forge
 # https://github.com/Creators-of-Create/Create/wiki/Depending-on-Create
-create_forge_version = 0.5.1.h-48
+create_forge_version = 0.5.1.j-55
 registrate_forge_version = MC1.20-1.3.3
 flywheel_forge_minecraft_version = 1.20.1
 flywheel_forge_version = 0.6.11-13
