--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,6 @@ minecraft_version = 1.20.1
 enabled_platforms = fabric,forge
 
 # Mappings
-# https://lambdaurora.dev/tools/import_quilt.html
-qm_version = 23
 # https://parchmentmc.org/docs/getting-started
 parchment_version = 2023.07.16
 
@@ -25,14 +23,14 @@ forge_version = 47.1.43
 
 # Create - Fabric
 # https://modrinth.com/mod/create-fabric/versions
-create_fabric_version = 0.5.1-f-build.1417+mc1.20.1
+create_fabric_version = 0.5.1-j-build.1600+mc1.20.1
 
 # Create - Forge
 # https://github.com/Creators-of-Create/Create/wiki/Depending-on-Create
-create_forge_version = 0.5.1.f-26
+create_forge_version = 0.5.1.j-55
 registrate_forge_version = MC1.20-1.3.3
 flywheel_forge_minecraft_version = 1.20.1
-flywheel_forge_version = 0.6.10-8
+flywheel_forge_version = 0.6.11-13
 
 # Mixin Extras
 # https://github.com/LlamaLad7/MixinExtras
