--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,10 @@
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 #
 
-org.gradle.jvmargs = -Xmx4G
+org.gradle.jvmargs = -Xmx3G
+org.gradle.caching = true
+
+loom.ignoreDependencyLoomVersionValidation=true
 
 # Mod Info
 archives_base_name = CreateNumismatics
