--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,11 @@
-org.gradle.jvmargs = -Xmx4G
+org.gradle.jvmargs = -Xmx3G
+org.gradle.caching = true
+
+loom.ignoreDependencyLoomVersionValidation=true
 
 # Mod Info
 archives_base_name = CreateNumismatics
-mod_version = 1.0.7
+mod_version = 1.0.8
 maven_group = dev.ithundxr.createnumismatics
 
 minecraft_version = 1.20.1
@@ -23,7 +26,7 @@ forge_version = 47.1.43
 
 # Create - Fabric
 # https://modrinth.com/mod/create-fabric/versions
-create_fabric_version = 0.5.1-j-build.1600+mc1.20.1
+create_fabric_version = 0.5.1-j-build.1604+mc1.20.1
 
 # Create - Forge
 # https://github.com/Creators-of-Create/Create/wiki/Depending-on-Create
